--- a/_posts/2025-10-28-케쉴주 15기 짧은 후기.md
+++ b/_posts/2025-10-28-케쉴주 15기 짧은 후기.md
@@ -1,10 +1,13 @@
 ---
 title: (K-Shield Jr.) 케쉴주 15기 짧은 후기
-author: P0LESTAR
+#author: P0LESTAR
 date: 2025-10-30 20:55:00 +0800
 categories: [K-Shield Jr.]
 tags: [K-Shield Jr., 케쉴주]
 pin: true
+sitemap:
+  changefreq: weekly
+  priority: 1.0
 ---
 
 # 케쉴주
@@ -17,63 +20,65 @@ pin: true
 <br><br><br>
 ---
 
-# 케쉴주 15기 정보
-이번 15기는 "정보보호 관리과정"과 "취약점 분석과정" 투 트랙으로 진행됐습니다.
-저는 취약점분석 트랙을 진행했습니다.
+# K-Shield Jr. 15기 정보
+이번 15기는 "정보보호 관리 과정"과 "취약점 분석 과정" 두 트랙으로 진행됐습니다.
+저는 취약점 분석 트랙을 진행했습니다.
 
 
-## 교육과정
+## 교육 과정
 부트캠프는 3개월 가량으로 다른 부트캠프(BoB 등)에 비해 짧은 편입니다.
 
 ### 공통 교육 과정
 두 트랙의 교육생들이 함께 교육을 받습니다.
-비전공자도 많이 듣기 때문에 pwn(bof), web(sql), network(기억안남)의 기초부터 시작합니다. 보안 관련 학과거나 보안공부를 시작했었던 분들은 아마 다 아는 내용일겁니다(아마).
+비전공자도 많이 듣기 때문에 pwn(bof), web(sql), network(기억 안 남)의 기초부터 시작합니다. 보안 관련 학과거나 보안 공부를 시작했던 분들은 아마 다 아는 내용일 거예요(아마).
 
 ### 과정별 교육
-공통 교육 과정 한달 이후 과정별로 수업을 듣습니다.
-취약점 분석 트랙은 Pwn, Web의 공격기법을 배우고, 1-day 분석을 몇가지 해봤습니다. 케쉴주에서 Vm을 클라우드 형태로 지원해주기 때문에 실습을 같이 해보며 따라갈 수 있습니다. (약간 느립니다)
+공통 교육 과정 한 달 이후 과정별로 수업을 듣습니다.
+취약점 분석 트랙은 Pwn, Web의 공격 기법을 배우고, 1-day 분석을 몇 가지 해봤습니다. K-Shield Jr.에서 VM을 클라우드 형태로 지원해 주기 때문에 실습을 같이 해보며 따라갈 수 있습니다. (약간 느립니다)
 
 ### 프로젝트
-4-6명으로 팀 프로젝트를 진행합니다. 현업에 종사 중이신 멘토님을 매칭시켜줍니다.
+4~6명으로 팀 프로젝트를 진행합니다. 현업에 종사 중이신 멘토님을 매칭시켜 줍니다.
 킥오프 발표, 중간 발표, 최종 발표 총 3번 발표합니다.
 매 발표마다 살벌한 피드백이 이뤄지며, 주제가 아예 바뀌기도 합니다.
 
-5주의 짧은 프로젝트기 때문에 교육기간에 미리미리 팀을 맞추거나, 주제를 정해두는걸 **반드시** 추천합니다.
+5주의 짧은 프로젝트이기 때문에 교육 기간에 미리미리 팀을 맞추거나, 주제를 정해두는 걸 **반드시** 추천합니다.
 
 ---
 
 ## 혜택
-1. 학업 장려금은 60만원(월20x3), 식비는 30만원(월10x3) 총 90만원을 받습니다. 
-단 출석률이 80%이상이여야 합니다
+1. 학업 장려금은 60만원(월 20만원×3개월), 식비는 30만원(월 10만원×3개월) 총 90만원을 받습니다. 
+단, 출석률이 80% 이상이어야 합니다.
 
-2. 비수도권 학생은 숙소지원비 20만원(1회)를 받습니다. 
-비수도권에서 기차타고 다니는 학생도 꽤 많았습니다.
+2. 비수도권 학생은 숙소 지원비 20만원(1회)을 받습니다. 
+비수도권에서 기차 타고 다니는 학생도 꽤 많았습니다.
 
-3. 과정별로 **우수 수료생은 상장 (한국인터넷진흥원장상 또는 장관상)**을 받습니다. 
-이번 기수부터 사전 평가는 우수수료생 평가비율에서 빠졌고, 사후평가(40%), 프로젝트(40%) 인증평가(10%), 출석(10%)로 평가됐습니다.
+3. 과정별로 **우수 수료생은 상장(한국인터넷진흥원장상 또는 장관상)**을 받습니다. 
+이번 기수부터 사전 평가는 우수 수료생 평가 비율에서 빠졌고, 사후 평가(40%), 프로젝트(40%), 인증 평가(10%), 출석(10%)로 평가됐습니다.
 
-4. 취업을 위한 지원이 많습니다. kisa와 계약된 회사들이 케쉴주 수료생 대상으로 인턴이나 정직원을 뽑기도하고, 취업 특강도 있습니다.
+4. 취업을 위한 지원이 많습니다. KISA와 계약된 회사들이 K-Shield Jr. 수료생 대상으로 인턴이나 정직원을 뽑기도 하고, 취업 특강도 있습니다.
 
 <br><br><br>
 
 ---
 
 # 후기
-제일 더울 때 시작해서 0도인날 끝났네요
+제일 더울 때 시작해서 0도인 날 끝났네요.
 생각보다 쉽게 시작했지만, 생각보다 어렵게 끝나서 다이나믹했습니다.
-강사님들도 친절하고 잘 알려주셨고, 동기들도 재밌는 분들이였어요
+강사님들도 친절하고 잘 가르쳐 주셨고, 동기들도 재밌는 분들이었어요.
 
-저는 케쉴주 15기를 우수수료생으로 마쳤습니다
-필기시험(사후 평가)을 못 봤지만, 팀 프로젝트를 1등해서 우수 수료생으로 뽑힐 수 있었던 것 같아요. (플젝 1등을 할줄 몰랐기에,,)
+저는 K-Shield Jr. 15기를 우수 수료생으로 마쳤습니다.
+필기시험(사후 평가)은 아쉽게 못 봤지만, 팀 프로젝트에서 1등을 해서 우수 수료생으로 선정될 수 있었던 것 같아요. (프로젝트 1등을 할 줄 몰랐기에,,)
 
-PM으로서 잘 따라와준 팀원들에게 감사를 전합니다
+PM으로서 잘 따라와 준 팀원들에게 감사를 전합니다.
 
 ![](https://velog.velcdn.com/images/backhoe/post/9a87f540-13ec-486a-b621-63cd98640801/image.png)
 
 
 
-### 지원 준비
+### 마음가짐
 
-K-Shield Jr. 지원을 준비 중이라면
-- 비전공자에게는 기초실력향상에 많은 도움이 될거 같습니다. 
-- 보안을 공부했던 분들이라면, 실력향상보다는 우수 수료생에 목표를 두고 지원하면 좋을것 같아요. 특히 3개월 부트캠프에 **장관상**을 주는 곳은 드물기 때문에 좋은 스펙이 될거에요
+K-Shield Jr. 지원을 준비 중이라면 아래처럼 목표를 설정하시면 좋겠습니다.
+
+- 비전공자에게는 기초 실력 향상에 많은 도움이 될 거예요. 프로젝트를 제외한 교육 과정이 비전공자 수준에 맞춰져 있기 때문에, "여기서 기초를 확실히 다져가겠다"는 마음가짐으로 임하시면 좋습니다.
+
+- 보안을 공부해 오신 분들이라면 실력 향상보다는 우수 수료생을 목표로 지원하시는 걸 추천해요. 특히 3개월 부트캠프에서 **장관상**을 받을 수 있는 곳은 드물기 때문에 좋은 스펙이 될 거예요.
