--- a/_posts/2025-10-28-케쉴주 15기 짧은 후기.md
+++ b/_posts/2025-10-28-케쉴주 15기 짧은 후기.md
@@ -5,6 +5,8 @@ date: 2025-10-30 20:55:00 +0800
 categories: [K-Shield Jr.]
 tags: [K-Shield Jr., 케쉴주]
 pin: true
+image:
+  path: https://p0lestar.github.io/assets/img/k-shield_Jr.png
 sitemap:
   changefreq: weekly
   priority: 1.0
