--- a/_posts/2025-10-28-케쉴주 15기 짧은 후기.md
+++ b/_posts/2025-10-28-케쉴주 15기 짧은 후기.md
@@ -1,5 +1,5 @@
 ---
-title: (K-Shield Jr.) 케쉴주 15기 짧은 후기
+title: "[K-Shield Jr.] 케쉴주 15기 짧은 후기"
 #author: P0LESTAR
 date: 2025-10-30 20:55:00 +0800
 categories: [K-Shield Jr.]
