--- a/_posts/2025-03-24-AI코딩 어시스턴트를 이용한 해킹.md
+++ b/_posts/2025-03-24-AI코딩 어시스턴트를 이용한 해킹.md
@@ -1,6 +1,6 @@
 ---
 title: AI 코딩 어시스턴트를 이용한 해킹
-#author: P0LESTAR
+author: P0LESTAR
 date: 2025-03-24 20:55:00 +0800
 categories: [report]
 tags: [AI,cursor]
