--- a/_posts/2025-11-17-OWASP TOP10 2025.md
+++ b/_posts/2025-11-17-OWASP TOP10 2025.md
@@ -1,6 +1,6 @@
 ---
 title: OWASP top10 2025
-#author: P0LESTAR
+author: P0LESTAR
 date: 2025-11-17 00:01:01 +0800
 categories: [OWASP]
 tags: [OWASP, OWASP top10]
