InsecureBank실습1-3 업로드
이미지 추가, 카테고리명 변경

--- a/_posts/2026-01-04-안드로이드_구조.md
+++ b/_posts/2026-01-04-안드로이드_구조.md
@@ -2,8 +2,8 @@
 title: Android OS구조
 author: P0LESTAR
 date: 2026-01-04 00:01:01 +0800
-categories: [모바일해킹]
-tags: [모바일해킹, 안드로이드, 안드로이드OS]
+categories: [MobileHacking]
+tags: [MobileHacking, Android, 안드로이드OS]
 #pin: true
 sitemap:
   changefreq: monthly
